# LiftClean

./: README.md  pyproject.toml
src/filter_lifton_liftoff/: __main__.py
src/filter_lifton_liftoff/scripts/: compare_parsed_summary_csv.py  extract_gene_id_gff.py  filter_short_introns.py  gff_strand_checker.py  parse_prepare_log.py  plot_summary_csvs.py
src/liftclean/: __main__.py
src/liftclean/scripts/: filter_short_introns.py  gff_strand_checker.py  parse_mikado_stats.py  parse_prepare_log.py  plot_summary_csvs.py
