[project]
name = "LiftClean"
version = "0.1.0"
description = "Lifton/Liftoff transcript filtering and comparison pipeline"
authors = [
    {name = "David Swarbreck", email = "David.Swarbreck@earlham.ac.uk"},
    {name = "Gemy George Kaithakottil", email = "Gemy.Kaithakottil@earlham.ac.uk"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
license = {text = "GNU General Public License v3.0"}
dependencies = [
    "matplotlib>=3.9.2,<4.0.0",
    "pandas>=2.2.3,<3.0.0",
    "upsetplot>=0.9.0,<1.0.0",
]

[project.scripts]
liftclean = "liftclean.__main__:main"
gff_strand_checker = "liftclean.scripts.gff_strand_checker:main"
parse_prepare_log = "liftclean.scripts.parse_prepare_log:main"
plot_summary_csvs = "liftclean.scripts.plot_summary_csvs:main"
compare_parsed_summary_csv = "liftclean.scripts.compare_parsed_summary_csv:main"
extract_gene_id_gff = "liftclean.scripts.extract_gene_id_gff:main"
filter_short_introns = "liftclean.scripts.filter_short_introns:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
